# hw3-fionaalii28

./: .gitignore  Makefile  ai_documentation.txt  index.md  myst.yml  pyproject.toml
_build/html/: config.json  index.html  index.json  losc-event-tutorial.json  myst.search.json
_build/html/losc-event-tutorial/: index.html
_build/site/: objects.inv
_build/site/content/: index.json  losc-event-tutorial.json
data/: GW150914_data.csv
ligotools/: __init__.py  utils.py
ligotools.egg-info/: PKG-INFO  SOURCES.txt
ligotools/tests/: test_readligo.py  test_utils.py
